--- a/example/index.html
+++ b/example/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blueprint 3D - Example</title>
+    <title>Build3D</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
 
-    <!-- Make sure you've built blueprint3d.js -->
     <!-- See README.md for details -->
-    <script src="js/blueprint3d.js"></script>
+    <script src="js/build3d.js"></script>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
