--- a/example/index.html
+++ b/example/index.html
@@ -141,6 +141,9 @@
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
                 Save
               </a>
+              <a href="#" class="btn btn-default btn-sm" id="savegltf">
+                Save Gltf
+              </a>
               <a class="btn btn-sm btn-default btn-file">
                <input type="file" class="hidden-input" id="loadFile">
                Load
