--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
               <a href="#" class="btn btn-default btn-sm" id="new">
                 New
               </a>
+                <a href="#" class="btn btn-default btn-sm" id="saveFile">
+                Save Gltf
+              </a>
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
                 Save
               </a>
