--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <a href="#" class="btn btn-default btn-sm" id="new">
                 New
               </a>
-                <a href="#" class="btn btn-default btn-sm" id="saveFile">
+                <a href="#" class="btn btn-default btn-sm" id="savegltf">
                 Save Gltf
               </a>
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
